<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>hsb.lol</groupId>
    <artifactId>lol-fight</artifactId>
    <version>1.0</version>
    <name>lol-fight</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.9.1</junit.version>
        <gluonfx.maven.plugin.version.custom>1.0.27</gluonfx.maven.plugin.version.custom>
        <mainClass>hsb.lol.lolfight.Main</mainClass>
        <mainClass2>hsb.lol.lolfight.Launch</mainClass2>
        <maven.compiler.source>25</maven.compiler.source>
    </properties>
    <repositories>
        <repository>
            <id>central</id>
            <url>https://maven.aliyun.com/repository/central</url>
        </repository>
        <repository>
            <id>jcenter</id>
            <url>https://maven.aliyun.com/repository/jcenter</url>
        </repository>
        <repository>
            <id>maven_central</id>
            <name>Maven Central</name>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>
    </repositories>
    <dependencies>
<!--        <dependency>-->
<!--            <groupId>org.openjfx</groupId>-->
<!--            <artifactId>javafx-controls</artifactId>-->
<!--            <version>20.0.2</version>-->
<!--        </dependency>-->

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>26-ea+7</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.*</include>
                    <include>**/*.*</include>
                </includes>
                <filtering>false</filtering>
            </resource>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.*</include>
                    <include>**/*.*</include>
                </includes>
                <filtering>false</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
<!--                <version>3.10.1</version>-->
                <configuration>
                    <source>25</source>
                    <target>25</target>
                    <compilerArgs>
                        <arg>--add-modules=javafx.controls</arg>
                        <arg>--add-modules=javafx.base</arg>
                        <arg>--add-modules=javafx.graphics</arg>

<!--                        <arg>&#45;&#45;add-modules=jdk.incubator.foreign</arg>-->
<!--                        <arg>&#45;&#45;add-exports=jdk.incubator.foreign/jdk.internal.foreign=hsb.lol.lolfight</arg>-->
<!--                        <arg>&#45;&#45;add-modules=java.base</arg>-->
<!--                        <arg>&#45;&#45;add-exports=java.base/jdk.internal.misc=hsb.lol.lolfight</arg>-->
<!--                        <arg>&#45;&#45;add-modules=java.desktop</arg>-->
<!--                        <arg>&#45;&#45;add-exports=java.desktop/sun.awt=hsb.lol.lolfight</arg>-->
<!--                        <arg>&#45;&#45;add-exports=java.desktop/java.awt.peer=hsb.lol.lolfight</arg>-->

                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>${gluonfx.maven.plugin.version.custom}</version>
                <configuration>
                    <target>host</target>

                    <mainClass>${mainClass}</mainClass>
                    <nativeImageArgs>
                        <arg>--no-fallback</arg>
                        <arg>--enable-http</arg>
                        <arg>--enable-https</arg>
                        <arg>-H:+AddAllCharsets</arg>
                        <arg>-dsa</arg>
<!--                        <arg>-H:DashboardDump=lol-fight</arg>-->
<!--                        <arg>-H:+DashboardAll</arg>-->
                    </nativeImageArgs>
                    <linkerArgs>
                        <arg>-Wl,--subsystem,console</arg>
                    </linkerArgs>
                    <reflectionList>
                        <list>java.net.AbstractPlainSocketImpl</list>
                    </reflectionList>
                    <graalvmHome>G:\kaifa_environment\jdk\graalvm-java23-windows-amd64-gluon-23+25.1-dev</graalvmHome>
                    <enableSWRendering>false</enableSWRendering>
                    <runtimeArgs>
                        <arg>-Dfile.encoding=utf8</arg>
                    </runtimeArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

<!--    <profiles>-->
<!--        <profile>-->
<!--            <id>native</id>-->
<!--            <build>-->
<!--                <plugins>-->
<!--                    <plugin>-->
<!--                        <groupId>org.graalvm.buildtools</groupId>-->
<!--                        <artifactId>native-maven-plugin</artifactId>-->
<!--                        <version>${native.maven.plugin.version}</version>-->
<!--                        <extensions>true</extensions>-->
<!--                        <executions>-->
<!--                            <execution>-->
<!--                                <id>build-native</id>-->
<!--                                <goals>-->
<!--                                    <goal>build</goal>-->
<!--                                </goals>-->
<!--                                <phase>package</phase>-->
<!--                            </execution>-->
<!--                            <execution>-->
<!--                                <id>test-native</id>-->
<!--                                <goals>-->
<!--                                    <goal>test</goal>-->
<!--                                </goals>-->
<!--                                <phase>test</phase>-->
<!--                            </execution>-->
<!--                        </executions>-->
<!--                        <configuration>-->
<!--                            <imageName>${imageName}</imageName>-->
<!--                            <fallback>false</fallback>-->
<!--                            <buildArgs>-->
<!--                                <arg>-H:DashboardDump=fortune -H:+DashboardAll</arg>-->
<!--                            </buildArgs>-->
<!--                            <agent>-->
<!--                                <enabled>true</enabled>-->
<!--                                <options>-->
<!--                                    <option>experimental-class-loader-support</option>-->
<!--                                </options>-->
<!--                            </agent>-->
<!--                        </configuration>-->
<!--                    </plugin>-->


<!--                    <plugin>-->
<!--                        <groupId>org.codehaus.mojo</groupId>-->
<!--                        <artifactId>exec-maven-plugin</artifactId>-->
<!--                        <version>3.0.0</version>-->
<!--                        <executions>-->
<!--                            <execution>-->
<!--                                <id>java-agent</id>-->
<!--                                <goals>-->
<!--                                    <goal>exec</goal>-->
<!--                                </goals>-->
<!--                                <configuration>-->
<!--                                    <executable>java</executable>-->
<!--                                    <workingDirectory>${project.build.directory}</workingDirectory>-->
<!--                                    <arguments>-->
<!--                                        <argument>-classpath</argument>-->
<!--                                        <classpath/>-->
<!--                                        <argument>${mainClass2}</argument>-->
<!--                                    </arguments>-->
<!--                                </configuration>-->
<!--                            </execution>-->
<!--                            <execution>-->
<!--                                <id>native</id>-->
<!--                                <goals>-->
<!--                                    <goal>exec</goal>-->
<!--                                </goals>-->
<!--                                <configuration>-->
<!--                                    <executable>${project.build.directory}/lol-fight</executable>-->
<!--                                    <workingDirectory>${project.build.directory}</workingDirectory>-->
<!--                                </configuration>-->
<!--                            </execution>-->
<!--                        </executions>-->
<!--                    </plugin>-->
<!--                </plugins>-->
<!--            </build>-->
<!--        </profile>-->
<!--    </profiles>-->
</project>